update email asthetics

--- a/lib/mail/register.ejs
+++ b/lib/mail/register.ejs
@@ -4,9 +4,7 @@
         <meta charset="utf-8" />
     </head>
     <body>
-        <h1>Welcome to the Prayer App!</h1>
-        <p>
-            You can confirm your account <a href="http://www.prayforhana.org/confirm/<%= token %>">here</a>.
-        </p>
+        <h2>Welcome to Hana!</h2>
+        <p>You can confirm your account <a href="http://www.prayforhana.org/confirm/<%= token %>">here</a>.</p>
     </body>
 </html>
