Add email functionality and blank line at end of every file.

--- a/lib/mail/register.ejs
+++ b/lib/mail/register.ejs
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h2>Welcome to Hana!</h2>
-        <p>You can confirm your account <a href="http://www.prayforhana.org/confirm/<%= token %>">here</a>.</p>
+        <p>We just need you to verify that this is your email address. You can confirm your account <a href="http://www.prayforhana.org/confirm/<%= token %>">here</a>.</p>
+        <p>Thanks!</p>
     </body>
 </html>
