--- a/src/mail/register.ejs
+++ b/src/mail/register.ejs
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
     </head>
     <body>
-        <h2>Welcome to Hana!</h2>
-        <p>We just need you to verify that this is your email address. You can confirm your account <a href="http://www.prayforhana.org/confirm/<%= token %>">here</a>.</p>
-        <p>Thanks!</p>
+        <div>
+            Welcome to Hana! We just need you to verify that this is your email address. To verify your email address, click <a href="http://www.prayforhana.org/confirm/<%= token %>">here</a>.</p>
+        </div>
     </body>
 </html>
